Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14161

conf-sanity/91 may fail due to rhashtable restart

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      according to rhashtable documentation:

      Also, you may miss objects if there are removals in between rhashtable_walk_stop and the next call to rhashtable_walk_start.

      so the fix could be to restart the iteration from scratch using rhashtable_walk_exit() and rhashtable_walk_enter()

            neilb Neil Brown (Inactive)
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: